--- a/base/html/bj_add.html
+++ b/base/html/bj_add.html
@@ -24,10 +24,10 @@
           <div class="data-tbl">
             <table>
               <colgroup>
-                <col style="width: 20%" />
-                <col style="width: 30%" />
-                <col style="width: 20%" />
-                <col style="width: 30%" />
+                <col style="width: 15%" />
+                <col style="width: 35%" />
+                <col style="width: 15%" />
+                <col style="width: 35%" />
               </colgroup>
               <tbody>
                 <tr>
@@ -35,6 +35,17 @@
                   <td colspan="3">
                     <div class="ui input rounded">
                       <input type="text" />
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <th>실행 종류</th>
+                  <td colspan="3" class="pdr-20">
+                    <div class="selectbox-wrap rounded" style="width: 192px">
+                      <select>
+                        <option value=""></option>
+                        <option value=""></option>
+                      </select>
                     </div>
                   </td>
                 </tr>
@@ -47,7 +58,7 @@
                   </td>
                   <th>실행 상태</th>
                   <td>
-                    <div class="selectbox-wrap rounded" style="width: 20.5rem">
+                    <div class="selectbox-wrap rounded">
                       <select>
                         <option value=""></option>
                         <option value=""></option>
