--- a/base/html/bj_list.html
+++ b/base/html/bj_list.html
@@ -67,6 +67,7 @@
                   <col />
                   <col />
                   <col />
+                  <col />
                 </colgroup>
                 <thead>
                   <tr>
@@ -78,6 +79,7 @@
                     </th>
                     <th>No</th>
                     <th>배치작업 ID</th>
+                    <th>실행 종류</th>
                     <th>실행 주기</th>
                     <th>내용</th>
                     <th>최종 실행</th>
@@ -95,6 +97,7 @@
                     </td>
                     <td>1</td>
                     <td>CenterClientSocketJob</td>
+                    <td>C</td>
                     <td>00/5 * * * ?</td>
                     <td>CenterClientSocketJob</td>
                     <td>2021-06-07 12:31:33</td>
@@ -110,6 +113,7 @@
                     </td>
                     <td>2</td>
                     <td>CenterClientSocketJob</td>
+                    <td>C</td>
                     <td>00/5 * * * ?</td>
                     <td>CenterClientSocketJob</td>
                     <td>2021-06-07 12:31:33</td>
