--- a/base/html/is/camera_map_add.html
+++ b/base/html/is/camera_map_add.html
@@ -71,6 +71,14 @@
                           </td>
                         </tr>
                         <tr>
+                          <th>지점 ID</th>
+                          <td colspan="3">
+                            <div class="ui input rounded">
+                              <input type="text" disabled />
+                            </div>
+                          </td>
+                        </tr>
+                        <tr>
                           <th>지점 주소</th>
                           <td colspan="3">
                             <div class="ui input rounded">
@@ -79,13 +87,13 @@
                           </td>
                         </tr>
                         <tr>
-                          <th>지점 ID</th>
+                          <th>카메라 ID</th>
                           <td>
                             <div class="ui input rounded">
-                              <input type="text" disabled />
+                              <input type="text" />
                             </div>
                           </td>
-                          <th class="pdl-15">카메라 ID</th>
+                          <th class="pdl-15">카메라 명</th>
                           <td>
                             <div class="ui input rounded">
                               <input type="text" />
@@ -93,13 +101,7 @@
                           </td>
                         </tr>
                         <tr>
-                          <th>카메라 명</th>
-                          <td>
-                            <div class="ui input rounded">
-                              <input type="text" />
-                            </div>
-                          </td>
-                          <th class="pdl-15">촬영 방향</th>
+                          <th>촬영 방향</th>
                           <td>
                             <div class="selectbox-wrap rounded">
                               <select>
@@ -107,6 +109,12 @@
                                 <option value="">아이템1</option>
                                 <option value="">아이템2</option>
                               </select>
+                            </div>
+                          </td>
+                          <th class="pdl-15">IP 주소</th>
+                          <td>
+                            <div class="ui input rounded">
+                              <input type="text" />
                             </div>
                           </td>
                         </tr>
@@ -129,14 +137,6 @@
                                 <option value="">아이템1</option>
                                 <option value="">아이템2</option>
                               </select>
-                            </div>
-                          </td>
-                        </tr>
-                        <tr>
-                          <th>IP 주소</th>
-                          <td colspan="3">
-                            <div class="ui input rounded">
-                              <input type="text" />
                             </div>
                           </td>
                         </tr>
