--- a/base/html/is/camera_map_edit.html
+++ b/base/html/is/camera_map_edit.html
@@ -38,19 +38,6 @@
             <div class="section">지점 Map 설정</div>
           </div>
 
-          <!-- 지도 타입 선택 -->
-          <div class="map-type">
-            <label>
-              <input type="radio" checked name="maptype" />
-              <span>일반지도</span>
-            </label>
-            <label>
-              <input type="radio" name="maptype" />
-              <span>위성지도</span>
-            </label>
-          </div>
-          <!-- //지도 타입 선택 -->
-
           <!-- 카메라 정보 설정 추가 팝업 : 팝업 위치는 ly-map Div의 자식요소가 되어야 합니다.  -->
           <div id="ex" class="modal">
             <div class="modal-container medium">
@@ -71,13 +58,21 @@
                       <tbody>
                         <tr>
                           <th>구역</th>
-                          <td class="pdr-20">
+                          <td>
                             <div class="ui input rounded">
                               <input type="text" disabled />
                             </div>
                           </td>
                           <th class="pdl-15">지점</th>
                           <td>
+                            <div class="ui input rounded">
+                              <input type="text" disabled />
+                            </div>
+                          </td>
+                        </tr>
+                        <tr>
+                          <th>지점 ID</th>
+                          <td colspan="3">
                             <div class="ui input rounded">
                               <input type="text" disabled />
                             </div>
@@ -92,13 +87,13 @@
                           </td>
                         </tr>
                         <tr>
-                          <th>지점 ID</th>
-                          <td class="pdr-20">
+                          <th>카메라 ID</th>
+                          <td>
                             <div class="ui input rounded">
-                              <input type="text" disabled />
+                              <input type="text" />
                             </div>
                           </td>
-                          <th class="pdl-15">카메라 ID</th>
+                          <th class="pdl-15">카메라 명</th>
                           <td>
                             <div class="ui input rounded">
                               <input type="text" />
@@ -106,13 +101,7 @@
                           </td>
                         </tr>
                         <tr>
-                          <th>카메라 명</th>
-                          <td class="pdr-20">
-                            <div class="ui input rounded">
-                              <input type="text" />
-                            </div>
-                          </td>
-                          <th class="pdl-15">촬영 방향</th>
+                          <th>촬영 방향</th>
                           <td>
                             <div class="selectbox-wrap rounded">
                               <select>
@@ -122,10 +111,16 @@
                               </select>
                             </div>
                           </td>
+                          <th class="pdl-15">IP 주소</th>
+                          <td>
+                            <div class="ui input rounded">
+                              <input type="text" />
+                            </div>
+                          </td>
                         </tr>
                         <tr>
                           <th>채널</th>
-                          <td class="pdr-20">
+                          <td>
                             <div class="selectbox-wrap rounded">
                               <select>
                                 <option value="">선택</option>
@@ -146,14 +141,6 @@
                           </td>
                         </tr>
                         <tr>
-                          <th>IP 주소</th>
-                          <td colspan="3">
-                            <div class="ui input rounded">
-                              <input type="text" />
-                            </div>
-                          </td>
-                        </tr>
-                        <tr>
                           <th>RTSP 주소</th>
                           <td colspan="3">
                             <div class="ui input rounded">
@@ -163,7 +150,7 @@
                         </tr>
                         <tr>
                           <th>해상도</th>
-                          <td class="pdr-20">
+                          <td>
                             <div class="resolution-info">
                               <div class="ui input rounded">
                                 <input type="text" />
@@ -183,7 +170,7 @@
                         </tr>
                         <tr>
                           <th>위도</th>
-                          <td class="pdr-20">
+                          <td>
                             <div class="ui input rounded">
                               <input type="text" />
                             </div>
