--- a/base/html/bj_view.html
+++ b/base/html/bj_view.html
@@ -26,7 +26,7 @@
               <!-- 231021 colgroup 너비 수정 -->
               <colgroup>
                 <col style="width: 140px" />
-                <col style="width: 165px" />
+                <col />
                 <col style="width: 140px" />
                 <col />
               </colgroup>
@@ -36,14 +36,16 @@
                   <td colspan="3">CenterClientSocketJob</td>
                 </tr>
                 <tr>
+                  <th>실행 종류</th>
+                  <td>Cron</td>
                   <th>실행 주기</th>
                   <td>00/5 ***</td>
-                  <th>실행 상태</th>
-                  <td>Y</td>
                 </tr>
                 <tr>
                   <th>최종 실행</th>
-                  <td colspan="3">2021-06-07 12:31:33</td>
+                  <td>2021-06-07 12:31:33</td>
+                  <th>실행 상태</th>
+                  <td>Y</td>
                 </tr>
                 <tr>
                   <th class="rowspan-style1">내용</th>
