1. 수정PPT(231103) 작업 2. 시나리오 동작 설정 목록 및 팝업(상세, 추가, 수정) 전체적으로 수정 3. 시나리오 항목 설정 화면 추가 scenario_item_set.html

--- a/base/html/cw/scenario_add.html
+++ b/base/html/cw/scenario_add.html
@@ -32,30 +32,6 @@
               <tbody>
                 <tr>
                   <th>구역</th>
-                  <td>
-                    <div class="selectbox-wrap rounded">
-                      <select>
-                        <option value="">선택</option>
-                        <option value="">아이템1</option>
-                        <option value="">아이템2</option>
-                        <option value="">아이템3</option>
-                      </select>
-                    </div>
-                  </td>
-                  <th class="pdl-15">지점</th>
-                  <td>
-                    <div class="selectbox-wrap rounded">
-                      <select>
-                        <option value="">선택</option>
-                        <option value="">아이템1</option>
-                        <option value="">아이템2</option>
-                        <option value="">아이템3</option>
-                      </select>
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <th>시설물 종류</th>
                   <td colspan="3">
                     <div class="selectbox-wrap rounded">
                       <select>
@@ -68,7 +44,7 @@
                   </td>
                 </tr>
                 <tr>
-                  <th>동작</th>
+                  <th>시설물 종류</th>
                   <td>
                     <div class="selectbox-wrap rounded">
                       <select>
@@ -79,8 +55,23 @@
                       </select>
                     </div>
                   </td>
-                  <th class="pdl-15">상시 동작</th>
+                  <th class="pdl-15">동작 코드</th>
                   <td>
+                    <div class="ui input rounded">
+                      <input type="text" />
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <th>점멸 여부</th>
+                  <td class="txt-center">
+                    <div class="ui checkbox primary-chkbox txt-none c-bluesky">
+                      <input type="checkbox" />
+                      <label></label>
+                    </div>
+                  </td>
+                  <th class="pdl-15">상시 동작</th>
+                  <td class="txt-center">
                     <div class="ui checkbox primary-chkbox txt-none c-bluesky">
                       <input type="checkbox" />
                       <label></label>
