--- a/base/html/cw/scenario_edit.html
+++ b/base/html/cw/scenario_edit.html
@@ -32,35 +32,36 @@
               <tbody>
                 <tr>
                   <th>구역</th>
-                  <td>
+                  <td colspan="3">
                     <div class="ui input rounded">
                       <input type="text" disabled />
-                    </div>
-                  </td>
-                  <th class="pdl-15">지점</th>
-                  <td>
-                    <div class="ui input rounded">
-                      <input type="text" />
                     </div>
                   </td>
                 </tr>
                 <tr>
                   <th>시설물 종류</th>
-                  <td colspan="3">
+                  <td>
+                    <div class="ui input rounded">
+                      <input type="text" disabled />
+                    </div>
+                  </td>
+                  <th class="pdl-15">동작 코드</th>
+                  <td>
                     <div class="ui input rounded">
                       <input type="text" />
                     </div>
                   </td>
                 </tr>
                 <tr>
-                  <th>동작</th>
-                  <td>
-                    <div class="ui input rounded">
-                      <input type="text" />
+                  <th>점멸 여부</th>
+                  <td class="txt-center">
+                    <div class="ui checkbox primary-chkbox txt-none c-bluesky">
+                      <input type="checkbox" />
+                      <label></label>
                     </div>
                   </td>
                   <th class="pdl-15">상시 동작</th>
-                  <td>
+                  <td class="txt-center">
                     <div class="ui checkbox primary-chkbox txt-none c-bluesky">
                       <input type="checkbox" />
                       <label></label>
