--- a/base/html/cw/scenario_view.html
+++ b/base/html/cw/scenario_view.html
@@ -32,21 +32,26 @@
               <tbody>
                 <tr>
                   <th>구역</th>
-                  <td>태릉</td>
-                  <th>지점</th>
-                  <td>태릉입구역</td>
+                  <td colspan="3">태릉</td>
                 </tr>
                 <tr>
                   <th>시설물 종류</th>
-                  <td colspan="3">음성안내장치</td>
-                </tr>
-                <tr>
+                  <td>음성안내장치</td>
                   <th>동작 코드</th>
                   <td>code.vg.1</td>
+                </tr>
+                <tr>
+                  <th>점멸 여부</th>
+                  <td>
+                    <div class="ui checkbox primary-chkbox txt-none c-bluesky">
+                      <input type="checkbox" checked />
+                      <label></label>
+                    </div>
+                  </td>
                   <th>상시 동작</th>
                   <td>
                     <div class="ui checkbox primary-chkbox txt-none c-bluesky">
-                      <input type="checkbox" />
+                      <input type="checkbox" checked />
                       <label></label>
                     </div>
                   </td>
