--- a/base/html/is/camera_list.html
+++ b/base/html/is/camera_list.html
@@ -88,6 +88,7 @@
                   <col />
                   <col />
                   <col />
+                  <col />
                 </colgroup>
                 <thead>
                   <tr>
@@ -101,6 +102,7 @@
                     <th>No</th>
                     <th>구역</th>
                     <th>지점</th>
+                    <th>카메라 ID</th>
                     <th>카메라 명</th>
                     <th>촬영 방향</th>
                     <th>IP Address</th>
@@ -118,6 +120,7 @@
                     <td>1</td>
                     <td>태릉</td>
                     <td>태릉입구역</td>
+                    <td>CAM00901</td>
                     <td>CAM1</td>
                     <td>북</td>
                     <td>192.168.172.130</td>
@@ -133,6 +136,7 @@
                     <td>1</td>
                     <td>태릉</td>
                     <td>태릉입구역</td>
+                    <td>CAM00901</td>
                     <td>CAM1</td>
                     <td>북</td>
                     <td>192.168.172.130</td>
