--- a/base/html/cw/scenario_list.html
+++ b/base/html/cw/scenario_list.html
@@ -55,21 +55,35 @@
                 <button type="button" class="btn-data-search">검색</button>
               </div>
               <!-- //inner -->
-              <button class="ui primary basic button rounded">Excel Down</button>
             </section>
             <!-- //filter-grouop -->
 
+            <section class="button-function-group">
+              <div class="left">
+                <div class="ui basic buttons">
+                  <button class="ui secondary basic button rounded">추가</button>
+                  <button class="ui secondary basic button rounded">삭제</button>
+                </div>
+                <!-- //buttons -->
+              </div>
+              <!-- //left -->
+              <div class="right">
+                <button class="ui primary basic button rounded">Excel Down</button>
+              </div>
+            </section>
+            <!-- //button-function-group -->
+
             <div class="data-tbl-very">
-              <table class="ui very basic table is-fncbtn">
+              <table class="ui very basic table">
                 <colgroup>
                   <col style="width: 72px" />
                   <col style="width: 56px" />
                   <col />
                   <col />
                   <col />
-                  <col />
                   <col style="width: 550px" />
-                  <col style="width: 80px" />
+                  <col />
+                  <col />
                   <col style="width: 200px" />
                 </colgroup>
                 <thead>
@@ -82,10 +96,10 @@
                     </th>
                     <th>No</th>
                     <th>구역</th>
-                    <th>지점</th>
                     <th>시설물 종류</th>
-                    <th>코드</th>
-                    <th>동작</th>
+                    <th>동작 코드</th>
+                    <th>동작 설명</th>
+                    <th>점멸 여부</th>
                     <th>상시 동작</th>
                     <th>수정일시</th>
                   </tr>
@@ -100,16 +114,11 @@
                     </td>
                     <td>1</td>
                     <td>태릉</td>
-                    <td>태릉입구역</td>
                     <td>음성안내장치</td>
                     <td>code.vg. 1</td>
                     <td>다음 신호에 건너세요</td>
-                    <td>
-                      <div class="ui checkbox primary-chkbox txt-none c-bluesky">
-                        <input type="checkbox" />
-                        <label></label>
-                      </div>
-                    </td>
+                    <td>점멸</td>
+                    <td>상시</td>
                     <td>2021.01.01 13:44:31</td>
                   </tr>
                   <tr>
@@ -121,16 +130,11 @@
                     </td>
                     <td>1</td>
                     <td>태릉</td>
-                    <td>태릉입구역</td>
                     <td>음성안내장치</td>
                     <td>code.vg. 1</td>
                     <td>다음 신호에 건너세요</td>
-                    <td>
-                      <div class="ui checkbox primary-chkbox txt-none c-bluesky">
-                        <input type="checkbox" />
-                        <label></label>
-                      </div>
-                    </td>
+                    <td>점멸</td>
+                    <td>상시</td>
                     <td>2021.01.01 13:44:31</td>
                   </tr>
                 </tbody>
